--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Welcome to Pixagram</h1>
-<%= link_to 'Sign Up', sign_up_path %>
-<%= link_to 'Sign In', sign_in_path %>
+<%= link_to 'Sign Up', sign_up_path %><br>
+<%= link_to 'Sign In', sign_in_path %><br>
+<%= link_to "Sign in with Facebook", "/auth/facebook" %>
