--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,69 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </head>
 
-  <body>
-    <div class="container">
-      <% flash.each do |key, value| %>
-      <div class="alert alert-<%= key %>"><%= value %></div>
-      <% end %>
-      <%= yield %>
+  <body style="background-color: lightgrey">
+  <div class="container">
+      <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <%= link_to "Pixagram", root_path, class: "navbar-brand" %>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <% if signed_in? %>
+                    <li>
+                        <%= link_to "New Post", new_post_path %>
+                    </li>
+                    <li>
+                        <%= link_to "Profile", user_path(current_user) %>
+                    </li>
+                    <li>
+                        <%= link_to "Logout", sign_out_path, method: "delete" %>
+                    </li>
+                    <% else %>
+                    <li>
+                        <%= link_to "Login", sign_in_path %>
+                    </li>
+                    <li>
+                        <%= link_to "Sign Up", sign_up_path %>
+                    </li>
+                    <li>
+                        <%= link_to "Login with Facebook", "/auth/facebook" %>
+                    </li>
+                    <% end %>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
     </div>
+    <!-- Page Content -->
+    <div class="container">
+
+        <div class="row">
+            <div class="col-lg-12 text-center">
+            <br><br></br>
+                  <% flash.each do |key, value| %>
+                  <div class="alert alert-<%= key %>"><%= value %></div>
+                  <% end %>
+
+                <%= yield %>
+
+            </div>
+        </div>
+        <!-- /.row -->
+
+    </div>
+    
   </body>
 </html>
